--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,9 @@
 body {
     margin: 0;
+    background-image: url('../imgs/bikini_bottom_scenic.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-color: #000;
 }
 
 .pre_text {
