Prettify highscores, fine tuned pre-game

--- a/static/css/style_1.css
+++ b/static/css/style_1.css
@@ -4,6 +4,10 @@ body {
     background-size: 100%;
     background-repeat: no-repeat;
     background-color: #000;
+}
+
+
+.header-row {
     text-align: center;
 }
 
